create authController, authModel, correct api-contact swagger
